atualizando os notebooks

--- a/Aula03/Arquivos_Jupyter/Aula03-01b-Fundamentos_PLN-Fase-01.ipynb
+++ b/Aula03/Arquivos_Jupyter/Aula03-01b-Fundamentos_PLN-Fase-01.ipynb
@@ -11,9 +11,7 @@
   {
    "cell_type": "markdown",
    "id": "0c4c69a9-5c6e-44d3-b861-43891038529e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## **1. O que é Processamento de Linguagem Natural (PLN)?**"
    ]
@@ -32,9 +30,7 @@
   {
    "cell_type": "markdown",
    "id": "71d1d56f-7fe7-4b30-bb1e-108b0fafa03d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## **2. Por que o PLN é Importante?**"
    ]
@@ -58,9 +54,7 @@
   {
    "cell_type": "markdown",
    "id": "681e25e7-1fa3-4b2f-b2d4-4831c11a1a90",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## **3. Aplicações do PLN no Cotidiano**"
    ]
@@ -128,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "e9c129bf-c19e-4608-8b2d-731889997559",
    "metadata": {},
    "outputs": [
@@ -136,23 +130,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to C:\\Users\\Luis\n",
-      "[nltk_data]     Rodrigo\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\nathalia.resende\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt_tab to C:\\Users\\Luis\n",
-      "[nltk_data]     Rodrigo\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     C:\\Users\\nathalia.resende\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt_tab is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to C:\\Users\\Luis\n",
-      "[nltk_data]     Rodrigo\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\nathalia.resende\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package omw-1.4 to C:\\Users\\Luis\n",
-      "[nltk_data]     Rodrigo\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package omw-1.4 to\n",
+      "[nltk_data]     C:\\Users\\nathalia.resende\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package omw-1.4 is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to C:\\Users\\Luis\n",
-      "[nltk_data]     Rodrigo\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\nathalia.resende\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n",
-      "[nltk_data] Downloading package rslp to C:\\Users\\Luis\n",
-      "[nltk_data]     Rodrigo\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package rslp to\n",
+      "[nltk_data]     C:\\Users\\nathalia.resende\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package rslp is already up-to-date!\n"
      ]
     },
@@ -162,7 +156,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "51d532c8-5680-44cb-a570-2bb2ce0a3017",
    "metadata": {},
    "outputs": [
@@ -308,9 +302,7 @@
   {
    "cell_type": "markdown",
    "id": "28f6f096-d03c-4ea7-88e7-6650ae4d8155",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### 🔖 Explicações"
    ]
@@ -374,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "c17cad2c-97b9-4845-b491-fc0a13f0c392",
    "metadata": {},
    "outputs": [
@@ -419,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "4d2bd421-48f6-48a3-8bdd-52126cc32754",
    "metadata": {},
    "outputs": [
@@ -506,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "887c01ae-e5d1-409d-8ace-282e82ba9488",
    "metadata": {},
    "outputs": [
@@ -620,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "bcbdc714-4852-47d1-9e54-57583e199ef1",
    "metadata": {},
    "outputs": [
@@ -681,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "44fceba0-cccc-4bff-82f9-855a09491d85",
    "metadata": {},
    "outputs": [
@@ -839,7 +831,7 @@
        "3      0    0      1          0            0       0     0      0     0     0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "39045218-da15-42a2-ab28-83cf957bf9e5",
    "metadata": {},
    "outputs": [],
@@ -880,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "b669e0a1-a192-452e-8719-4f29b852ce9b",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1049,7 @@
        "3      0    0      1          0            0       0     0      0     0     0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1329,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (venv)",
+   "display_name": "Python ML (venv)",
    "language": "python",
    "name": "machine_learning"
   },
@@ -1351,7 +1343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
